Complete update and recompilation of existing plugins to match our new packaging.